# europython26-litestar

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  Makefile  README.md  package-lock.json  package.json  prek.toml  pyproject.toml  slides.md  suggestions-2.md  suggestions.md
.agents/: beads.json  flows.md  index.md  patterns.md  product-guidelines.md  product.md  setup-state.json  tech-stack.md  workflow.md
.agents/research/research_pdf_export/: metadata.json  research.md
.github/workflows/: deploy.yml
components/: EventLoop.vue  JourneyCurve.vue  LayerConfig.vue  LayerFlow.vue  MiddlewareChain.vue  StackReality.vue  StackThink.vue  Star.vue
docs/superpowers/specs/: 2026-06-14-tested-python-examples-design.md
examples/: README.md
examples/src/: batteries.py  blocking.py  controllers.py  di.py  dtos.py  hello.py  orders.py
examples/tests/: test_examples.py
setup/: main.ts  shiki.ts
slides/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
styles/: index.ts  main.css
