[project]
name = "europython-2026-litestar"
version = "0.0.1"
description = "EuroPython 2026 deck for how to build performant APIs with Litestar."
requires-python = ">=3.12"
dependencies = ["advanced-alchemy>=1.11.0", "litestar", "pandas>=2"]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.6", "pyright>=1.1"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["examples/src"]
testpaths = ["examples/tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["examples/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["examples/src", "examples/tests"]
extraPaths = ["examples/src"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
